# AromaMemoir

./: .gitignore  MVP开发速查手册.md  README.md  cool-admin适配度分析.md  味记PRD.md  架构设计与迁移方案.md
docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md  system_design_v2.md
scripts/: run-all-tests.sh
weiji-admin-web/: README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
weiji-admin-web/src/: main.ts
weiji-ai/: .env.example  .gitignore  README.md  config.py  conftest.py  exceptions.py  main.py  pyproject.toml  requirements.txt
weiji-ai/services/: baidu_vision.py  openai_vision.py  qwen_llm.py  tencent_moderation.py  volcano_ark.py  volcano_image.py  volcano_tos.py  xfyun_asr.py
weiji-ai/tests/integration/: test_endpoints.py
weiji-ai/tests/unit/: test_config.py  test_exceptions.py  test_services_degradation.py  test_volcano_ark_edit.py
weiji-app/: App.vue  README.md  env.d.ts  index.html  manifest.json  package-lock.json  package.json  pages.json  pnpm-lock.yaml  tsconfig.json  uni.scss  vite.config.ts  vue-demi-shim.js
weiji-app/config/: dev.ts  prod.ts  proxy.ts
weiji-app/router/: index.ts
weiji-app/src/: App.vue  manifest.json  pages.json
weiji-app/utils/: api.ts  reserved-words.ts
weiji-server/: .env.example  .gitignore  Dockerfile  README.md  bootstrap-local.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
weiji-server/db/: README.md  init.sql
weiji-web/: README.md  api.js  app.js  index.html
(+418 files in other folders)
